# AI-Agent-for-Backtesting

./: .gitignore  Agent for Quant Backtesting-project sheet.docx  PosterMaterials.docx  Presentation2.pptx  README.md  environment.yml  pyproject.toml  ~$ent for Quant Backtesting-project sheet.docx
.adaptive_workdir/: strategy_atr_bandit_attempt1.py  strategy_breakout_attempt1.py  strategy_breakout_attempt2.py  strategy_cost_sensitivity_attempt1.py  strategy_cost_sensitivity_attempt2.py  strategy_cost_sensitivity_attempt3.py  strategy_cost_sensitivity_attempt4.py  strategy_cost_sensitivity_attempt5.py  strategy_mean_reversion_attempt1.py  strategy_mean_reversion_attempt2.py  strategy_mean_reversion_attempt3.py  strategy_mean_reversion_attempt4.py  strategy_mean_reversion_attempt5.py  strategy_momentum_daily_attempt1.py  strategy_momentum_weekly_attempt1.py  strategy_pair_trading_attempt1.py  strategy_pair_trading_attempt2.py  strategy_regime_filter_ma_attempt1.py  strategy_risk_parity_attempt1.py  strategy_volatility_targeting_attempt1.py  strategy_weekday_mask_attempt1.py  strategy_weekday_mask_attempt2.py
.pure_llm/: pure_llm_breakout_attempt1.py  pure_llm_breakout_attempt2.py  pure_llm_breakout_attempt3.py  pure_llm_breakout_attempt4.py  pure_llm_breakout_attempt5.py  pure_llm_mean_reversion_attempt1.py  pure_llm_mean_reversion_attempt2.py  pure_llm_mean_reversion_attempt3.py  pure_llm_mean_reversion_attempt4.py  pure_llm_mean_reversion_attempt5.py  pure_llm_momentum_daily_attempt1.py  pure_llm_momentum_weekly_attempt1.py  pure_llm_pair_trading_attempt1.py  (+10 more)
(+119 files in other folders)
