[project]
name = "agentic-backtester"
version = "0.1.0"
description = "Agentic Quant Backtesting Copilot"
authors = [{name="JoJo Wang", email="whymath@uchicago.edu"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "yfinance",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["backtester*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
